syntax = "proto3";

option go_package = "github.com/haritsrizkall/grpc-go/pb";

package song;

message Song {
  string title = 1;
  string artist = 2;
  string album = 3;
}

message SongRequest {
  string title = 1;
}

message SongResponse {
  Song song = 1;
}

message SongsResponse {
  repeated Song songs = 1;
}

message DeleteSongRequest {
  string title = 1;
}

message EmptyRequest {}

service SongService {
  rpc GetSong(SongRequest) returns (SongResponse);
  rpc GetAllSongs(EmptyRequest) returns (SongsResponse);
  rpc AddSong(Song) returns (SongResponse);
  rpc DeleteSong(DeleteSongRequest) returns (SongResponse);
}